--- a/src/pages/Tweets/Tweets.module.css
+++ b/src/pages/Tweets/Tweets.module.css
@@ -1,7 +1,7 @@
 .box {
   display: flex;
   justify-content: center;
-  text-align: center;
-  height: 100vw;
-  background-color: blue;
+  align-items: center;
+  height: 100vh;
+  background-color: #766a92;
 }
