--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -12,10 +12,21 @@
 }
 
 .header {
+  background-color: #ebd8ff;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 60px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #ebd8ff;
   padding: 0 50px;
 }
 
