--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -57,6 +57,7 @@
   border-radius: 50%;
 }
 .avatarInner {
+  background-image: url(../images/Logo.png);
   background-color: #5736a3;
   position: absolute;
   width: 62px;
@@ -76,28 +77,7 @@
   justify-content: center;
   margin-bottom: 26px;
 }
-.button {
-  padding: 14px 56px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #ebd8ff;
-  box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
-  border-radius: 10.3108px;
-  border: 0;
-  font-weight: 600;
-  font-size: 18px;
-  text-transform: uppercase;
-  line-height: 21.94px;
-  color: #373737;
-  width: 196px;
-  cursor: pointer;
-}
-.buttonFollowing {
-  background-color: #5cd3a8;
-  padding-left: 39px;
-  padding-right: 39px;
-}
+
 .buttonBox {
   display: flex;
   justify-content: center;
