--- a/src/components/ButtonBack/ButtonBack.module.css
+++ b/src/components/ButtonBack/ButtonBack.module.css
@@ -1,15 +1,9 @@
-.list {
-  display: flex;
-  gap: 48px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 .button {
   padding: 14px 46px;
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  background: #5cd3a8;
+  background: #ebd8ff;
   box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
   border-radius: 10.3108px;
   border: 0;
@@ -19,17 +13,22 @@
   line-height: 21.94px;
   color: #373737;
   cursor: pointer;
-  margin-bottom: 10px;
-  margin-top: 20px;
+  text-decoration: none;
   transition: all 0.4s cubic-bezier(0.5, 0, 0.3, 1);
 }
-.button:hover {
-  transform: scale(1.04);
+.button:hover,
+.button:focus {
+  transform: scale(1.07);
+  background: #5cd3a8;
   transition: all 0.4s cubic-bezier(0.5, 0, 0.3, 1);
-  color: #fff;
 }
 .buttonBox {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
+  padding-top: 10px;
+  padding-left: 20px;
+}
+.icon {
+  margin-left: 10px;
 }
