--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -32,6 +32,13 @@
 }
 
 .name {
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 700;
   font-size: 25px;
+  line-height: 1.88;
+  align-items: center;
+  display: flex;
+  text-align: center;
+  letter-spacing: 0.06em;
   color: #2a363b;
 }
